# reservore-bot

./: .gitignore  Dockerfile  build-app.sh  config.example.yml  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: docker-publish.yml
modules/: __init__.py  bot.py
modules/cogs/commands/: role_selector.py
modules/cogs/listeners/: role_selector.py
